# upSkilling

./: .gitignore  1000 DevOps + MLOps + Kubernetes + GCP Interview Questions.txt  README.md  activity.txt  daily-commit.js  daily-log.md  generate_commits.sh  render.yaml  run-continuously.sh
GCP/gcp_vertex_tabular_ml/: .gitignore  README.md  pyproject.toml
GCP/gcp_vertex_tabular_ml/terraform/: outputs.tf  variables.tf
gcp-cloud-engineering-portfolio/gcp_mlops_starter/: README.md  pyproject.toml  requirements.txt
gcp-cloud-engineering-portfolio/gcp_mlops_starter/terraform/: variables.tf
gcp-cloud-engineering-portfolio/gcp_mlops_starter/tests/: test_model.py  test_pipeline.py
gcp-cloud-engineering-portfolio/terraform_automation/: README.md  pyproject.toml
gcp-cloud-engineering-portfolio/terraform_automation/terraform/: main.tf  outputs.tf
gcp-cloud-engineering-portfolio/terraform_automation/tests/: test_terraform_helper.py
gcp-mlops-pipeline-showcase/: .gitignore  Makefile  README.md  pyproject.toml
gcp-mlops-pipeline-showcase/.github/workflows/: mlops-ci.yml
gcp-mlops-pipeline-showcase/docker/: mlflow.Dockerfile  retrainer.Dockerfile  serving.Dockerfile  training.Dockerfile
gcp-mlops-pipeline-showcase/docs/: architecture.md  days-46-60-plan.md  drift-and-retraining.md  runbook.md
gcp-mlops-pipeline-showcase/gcp_mlops_pipeline_showcase.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gcp-mlops-pipeline-showcase/k8s/base/: drift-cronjob.yaml  fastapi-deployment.yaml  fastapi-hpa.yaml  grafana-dashboard.yaml  kserve-inferenceservice.yaml  kustomization.yaml  mlflow.yaml  namespace.yaml  prometheus-rules.yaml  service-accounts.yaml  service-monitor.yaml  training-job.yaml
gcp-mlops-pipeline-showcase/scripts/: install-kserve.sh
gcp-mlops-pipeline-showcase/src/: __init__.py
gcp-mlops-pipeline-showcase/src/common/: __init__.py  model_io.py
gcp-mlops-pipeline-showcase/src/monitoring/: __init__.py  drift.py
gcp-mlops-pipeline-showcase/src/retrainer/: __init__.py  app.py
gcp-mlops-pipeline-showcase/src/serving/: __init__.py  app.py
gcp-mlops-pipeline-showcase/src/training/: train.py
gcp-mlops-pipeline-showcase/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
gcp-mlops-pipeline-showcase/tests/: test_drift.py  test_retrainer.py  test_serving.py  test_training.py
mlops-ollama-incident-copilot/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements-platform.txt  requirements.txt
mlops-ollama-incident-copilot/.github/workflows/: ci.yml
mlops-ollama-incident-copilot/argocd/: application.yaml
mlops-ollama-incident-copilot/configs/: model.yaml
mlops-ollama-incident-copilot/data/processed/: model_monitoring_report.json  training_report.txt
mlops-ollama-incident-copilot/db/migrations/: 001_init.sql
mlops-ollama-incident-copilot/docs/: PROJECT_STORY.md  TECH_STACK_MATRIX.md  sample-request.json
mlops-ollama-incident-copilot/feature_store/: feature_contract.yaml
mlops-ollama-incident-copilot/go/event-router/: go.mod  main.go
mlops-ollama-incident-copilot/helm/incident-copilot/: Chart.yaml  values.yaml
mlops-ollama-incident-copilot/integrations/: mlflow_register.py
mlops-ollama-incident-copilot/k8s/base/: configmap.yaml
mlops-ollama-incident-copilot/k8s/gpu/: gpu-scheduled-ollama.yaml
mlops-ollama-incident-copilot/kubeflow/: incident_pipeline.py
mlops-ollama-incident-copilot/messaging/: kafka-topics.sh  pubsub-topics.sh
mlops-ollama-incident-copilot/monitoring/elk/: logstash.conf
mlops-ollama-incident-copilot/monitoring/otel/: collector.yml
mlops-ollama-incident-copilot/monitoring/prometheus/: prometheus.yml
mlops-ollama-incident-copilot/scripts/: generate_training_data.py  model_monitoring_report.py
mlops-ollama-incident-copilot/src/incident_copilot/: api.py  copilot.py  model.py  monitoring.py  schemas.py  settings.py  training.py
mlops-ollama-incident-copilot/tests/: test_copilot.py  test_monitoring.py  test_risk_model.py
mlops-ollama-incident-copilot/vertex/: deploy_vertex.py  train_vertex.py
python-gcp-automation-toolkit/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
python-gcp-automation-toolkit/.github/workflows/: ci.yml
python-gcp-automation-toolkit/config/: example.env
python-gcp-automation-toolkit/docs/: architecture.md  days-1-75-plan.md  permissions.md
python-gcp-automation-toolkit/examples/cloud-run-app/: Dockerfile  main.py
python-gcp-automation-toolkit/src/gcp_ops_toolkit/: api.py  (+11 more)
python-gcp-automation-toolkit/tests/: test_api.py  test_cli.py  test_cloud_run.py  test_cost_optimizer.py  test_gke_health.py  test_iam_audit.py  test_reporting.py  test_vertex_ai.py
(+3101 files in other folders)
