[project]
name = "gcp-mlops-pipeline-showcase"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "google-cloud-aiplatform>=1.70.0",
  "google-cloud-pubsub>=2.25.0",
  "google-cloud-storage>=2.18.0",
  "joblib>=1.4.0",
  "mlflow>=2.17.0,<4",
  "numpy>=1.26.0",
  "prometheus-client>=0.21.0",
  "pydantic>=2.9.0",
  "scikit-learn>=1.5.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
