[project]
name = "gcp-mlops-starter"
version = "0.1.0"
description = "A lightweight GCP MLOps starter with Terraform infrastructure and Python model training."
authors = [{ name = "MLOps Learning Project" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-cloud-storage>=2.10.0"
]

[project.scripts]
gcp-mlops = "gcp_mlops_starter.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
